# QuickPerf

./: .gitignore  CMakeLists.txt  CommonDefines.h  main.cpp  pfa_test_config.json  pfa_test_config_2.json  qml.qrc  sample.json  u_spc_0_0_signals.7z
Controller/: MainWindowController.cpp  MainWindowController.h  PerfGraphViewController.cpp  PerfGraphViewController.h  PerfListViewController.cpp  PerfListViewController.h  SingleChannelController.cpp  SingleChannelController.h
CustomWidget/: PointSetItem.cpp  PointSetItem.h
DataModel/: ChannelDataModel.cpp  ChannelDataModel.h  DataCenter.cpp  DataCenter.h  DataGenerator.cpp  DataGenerator.h  RectangleViewModel.cpp  RectangleViewModel.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  WorkerThread.cpp  WorkerThread.h
Json/: JsonEntry.cpp  JsonEntry.h
Qml/: AxisItem.qml  BarSetChannel.qml  Channel.qml  GraphBorder.qml  PerfGraphView.qml  PerfListView.qml  PerfTreeView.qml  PerfTreeViewItem.qml  PointSetView.qml  main.qml
